Added exception hadling and bearer token pmplementation
